Improved the collection of predictions for model metrics

--- a/Simple_Image_Classification/Simple_Image_Classification.ipynb
+++ b/Simple_Image_Classification/Simple_Image_Classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOUcCU4zamtZQXngbuUx5sU",
+      "authorship_tag": "ABX9TyMUNabh1rbtvrlZraD7HnG4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/thaCripple/simple-ANNs-pytorch/blob/main/Simple_Image_Classification/Simple_Image_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/thaCripple/simple-ANNs-pytorch/blob/prediction_collection_improvement/Simple_Image_Classification/Simple_Image_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "-JLcd-EUr2MG"
       },
@@ -72,7 +72,7 @@
         "collapsed": true,
         "id": "rC8-iOvrvDcN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "Ya4Jx7TtvG75"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "6J37fHsgvgC_"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
         "id": "Ez6uugtMvqcV",
         "outputId": "a142d43a-7f61-4de2-b31d-be600041a648"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,7 +145,7 @@
         "id": "7-Cp9Vi6vqaH",
         "outputId": "cb73884c-7042-49d5-b28f-3751a72eaf3a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "ph0hO-17LzbT"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "collapsed": true,
         "id": "4vmIFlabvS8V"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
         "id": "Q-hEVAHuwza9",
         "outputId": "add3a0df-a2a6-4c07-e704-15a98a33ce22"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "VmNQpz8_xQ2S"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -253,7 +253,7 @@
         "id": "2R0CY_yhyl5F",
         "outputId": "5d0b3e91-3a94-4fbd-9d1d-d9d9301bcb91"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +279,7 @@
         "id": "h1ONeCb8zHeG",
         "outputId": "2a9e139e-b817-447c-b0d9-b879e434c25f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +334,7 @@
         "id": "BaIWj_axzyo3",
         "outputId": "c59e7c5c-671d-4e08-b4ba-a8c05c76fe1f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,7 +365,7 @@
       "metadata": {
         "id": "qN-blSiW7fYS"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,7 +377,7 @@
       "metadata": {
         "id": "QYh2xQOX7eTU"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -392,7 +392,7 @@
         "id": "5QMujBgj7-Sy",
         "outputId": "da9694f4-b238-4dee-83e8-c86b6ede9d5d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +422,7 @@
         "id": "BT5g7d788OHv",
         "outputId": "efc49ae9-79b6-4d52-9a83-7c1b41f86f00"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,7 +592,7 @@
       "metadata": {
         "id": "OCBAYZ4iBrK2"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -624,7 +624,7 @@
       "metadata": {
         "id": "sYL7JRV0EeTZ"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -695,7 +695,7 @@
       "metadata": {
         "id": "pUB5I8KMO8Nu"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -720,7 +720,7 @@
       "metadata": {
         "id": "RQMaBqFaPHcu"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -732,7 +732,7 @@
       "metadata": {
         "id": "RPx-VN6-PLwQ"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -756,7 +756,7 @@
         "id": "KeiG9E1yP3-d",
         "outputId": "43d8aa2d-de0e-4b8e-f24f-7630c05c6ae2"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +778,7 @@
       "metadata": {
         "id": "hTg0LAsUPXaJ"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -801,7 +801,7 @@
         "id": "RClJhojKPXaJ",
         "outputId": "2cefff73-0063-47b3-b6e2-ca6f1c8f7760"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1001,7 +1001,7 @@
         "id": "zmbL55XGG-Z1",
         "outputId": "bc894849-4a64-4e8e-d139-06405e80082c"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1037,7 +1037,7 @@
         "id": "AMqJ0W5vJo2s",
         "outputId": "6171e69d-1487-420b-8996-26ba71cf9694"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1093,7 +1093,7 @@
       "metadata": {
         "id": "WQi1XGPkELfE"
       },
-      "execution_count": 168,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1117,7 +1117,7 @@
         "id": "DyP99EfqHijo",
         "outputId": "a77a129c-0270-4224-ffec-9312ced6023b"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1144,7 +1144,7 @@
         "id": "p5a8YMxaH7uq",
         "outputId": "29d3ba2c-f4d4-4c49-feb1-e3447631046f"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1171,7 +1171,7 @@
         "id": "iOMGgi-9IOzW",
         "outputId": "611c819f-a780-454d-e27c-0395e577c414"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1198,7 +1198,7 @@
         "id": "okfAc6OJIdPP",
         "outputId": "9c33d748-4c0e-49a9-e634-081d9eacafd3"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1348,7 +1348,7 @@
       "metadata": {
         "id": "GWolURG4Gxw7"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1363,7 +1363,7 @@
         "id": "MZtRT8c5HV8c",
         "outputId": "34f06c76-8fea-448b-d26f-39696c297b6b"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1385,7 +1385,7 @@
       "metadata": {
         "id": "Zz_JEt--HcQx"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1408,7 +1408,7 @@
         "id": "HibHMSi6HZHO",
         "outputId": "ae1de5db-7561-47ba-a711-017e06eb4af1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1471,7 +1471,7 @@
         "id": "D5DN3l4vXuoE",
         "outputId": "b9a79354-79be-4c4f-a236-527ab95c9cbd"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1504,7 +1504,7 @@
         "id": "YFfsY6s3YlHQ",
         "outputId": "f7d3297a-4915-4819-93eb-e19b8d783690"
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1530,7 +1530,7 @@
         "id": "haxNQWKwbEJn",
         "outputId": "fe2cfec9-807e-4cc2-d365-71703c5461bf"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1584,7 +1584,7 @@
         "id": "An8poi9YaM0x",
         "outputId": "e5ecbcfa-c09e-4a37-ff10-32be4288d20d"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1606,19 +1606,8 @@
       "metadata": {
         "id": "2orTvL6RctdC"
       },
-      "execution_count": 163,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**This process needs to be improved!**\n",
-        "\n",
-        "Find a way to collect all the predictions into a tensor and convert it into np.array at the very end"
-      ],
-      "metadata": {
-        "id": "ueh_K8BQt-pl"
-      }
     },
     {
       "cell_type": "code",
@@ -1633,7 +1622,7 @@
         "id": "nhSL8VyOc9E6",
         "outputId": "a6d3d0a4-7141-4089-cdf8-84bfe588fa0c"
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1662,46 +1651,86 @@
       "metadata": {
         "id": "NIfJXeu-LcvR"
       },
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "y_preds_all = []\n",
-        "for i in range(len(test_dl)):\n",
-        "  y_preds = list(y_preds_batch[i].to(device=\"cpu\").numpy())\n",
-        "  y_preds_all += y_preds"
-      ],
-      "metadata": {
-        "id": "bvTU0jpzhKy4"
-      },
-      "execution_count": 157,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "len(y_preds_all)"
+        "y_preds_tensor = torch.cat(tensors=y_preds_batch, dim=0)\n",
+        "y_preds_tensor"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "YYm3iSA1iDIm",
-        "outputId": "cc36a9d9-c70c-470e-c623-11d25f245852"
+        "id": "gJXM13FG07UA",
+        "outputId": "78308004-ea92-42a0-e327-1ef5dcabd650"
       },
-      "execution_count": 158,
+      "execution_count": 185,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10000"
+              "tensor([9, 2, 1,  ..., 8, 1, 5], device='cuda:0')"
             ]
           },
           "metadata": {},
-          "execution_count": 158
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_preds_tensor.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8cI0LHfZ1TCo",
+        "outputId": "e39b1cfa-e25b-4b3e-ac94-9d12a1d1c3d0"
+      },
+      "execution_count": 186,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([10000])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 186
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_preds_all = y_preds_tensor.to(device=\"cpu\").numpy()\n",
+        "y_preds_all"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BJsiLE8S1k7O",
+        "outputId": "c1fabf15-9fac-4740-b1b7-1cef6a32d2cf"
+      },
+      "execution_count": 187,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9, 2, 1, ..., 8, 1, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 187
         }
       ]
     },
@@ -1715,9 +1744,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4AgfZ-f3jQ5C",
-        "outputId": "297fe2e4-3f9f-4413-9f2a-2513fdc9ecf3"
+        "outputId": "bef16376-9d38-44a0-e47f-d7f68dbf0da2"
       },
-      "execution_count": 162,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
@@ -1756,19 +1785,19 @@
           "height": 987
         },
         "id": "GLIvX5aFj2a4",
-        "outputId": "ddae42f7-ca78-4054-9b1c-5d8cd8bb011a"
+        "outputId": "ab4a5b15-c519-48bc-e229-4eee96d7bb37"
       },
-      "execution_count": 166,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fe8d1c1aa90>"
+              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fe8d2265bd0>"
             ]
           },
           "metadata": {},
-          "execution_count": 166
+          "execution_count": 189
         },
         {
           "output_type": "display_data",
